WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80461
Base the access to CSSStyleDeclaration on the CSSPropertyID instead of the PropertyName
https://bugs.webkit.org/show_bug.cgi?id=80461
Summary
Base the access to CSSStyleDeclaration on the CSSPropertyID instead of the Pr...
Benjamin Poulain
Reported
2012-03-06 17:26:54 PST
This is the second part of
https://bugs.webkit.org/show_bug.cgi?id=77271
Despite the recent improvement, cssPropertyIDForJSCSSPropertyName() remains the bottleneck in accessing CSS Properties. We should cut that further by basing the PropertySlot on the CSSPropertyID instead of the PropertyName.
Attachments
Patch
(7.50 KB, patch)
2012-03-06 17:41 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.31 KB, patch)
2012-03-08 18:58 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2012-03-06 17:41:42 PST
Created
attachment 130495
[details]
Patch
Alexis Menard (darktears)
Comment 2
2012-03-06 17:55:48 PST
Comment on
attachment 130495
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=130495&action=review
> Source/WebCore/ChangeLog:14 > + CSSPropertyID as the customIndex, and the value can be accessed direclty when the slot is
typo: directly
Alexis Menard (darktears)
Comment 3
2012-03-06 17:59:20 PST
Comment on
attachment 130495
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=130495&action=review
> Source/WebCore/css/CSSStyleDeclaration.idl:27 > + JSCustomGetOwnPropertySlotAndDescriptor,
Where this comes from?
Benjamin Poulain
Comment 4
2012-03-06 18:02:10 PST
> > Source/WebCore/css/CSSStyleDeclaration.idl:27 > > + JSCustomGetOwnPropertySlotAndDescriptor, > > Where this comes from?
http://trac.webkit.org/wiki/WebKitIDL#JSCustomToNativeObject
This is how you can write your own getters.
Alexis Menard (darktears)
Comment 5
2012-03-06 18:06:59 PST
Comment on
attachment 130495
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=130495&action=review
> Source/WebCore/bindings/js/JSCSSStyleDeclarationCustom.cpp:333 > + value = cssPropertyGetterPixelOrPosPrefix(exec, this, propertyInfo.propertyID);
why two slots? Could you just pass propertyInfo.hadPixelOrPosPrefix as parameter?
Build Bot
Comment 6
2012-03-06 18:07:34 PST
Comment on
attachment 130495
[details]
Patch
Attachment 130495
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/11836652
Alexis Menard (darktears)
Comment 7
2012-03-06 18:09:14 PST
(In reply to
comment #4
)
> > > Source/WebCore/css/CSSStyleDeclaration.idl:27 > > > + JSCustomGetOwnPropertySlotAndDescriptor, > > > > Where this comes from? > >
http://trac.webkit.org/wiki/WebKitIDL#JSCustomToNativeObject
> > This is how you can write your own getters.
Tricky thanks for pointing it out.
Alexis Menard (darktears)
Comment 8
2012-03-06 18:22:15 PST
Comment on
attachment 130495
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=130495&action=review
>> Source/WebCore/bindings/js/JSCSSStyleDeclarationCustom.cpp:333 >> + value = cssPropertyGetterPixelOrPosPrefix(exec, this, propertyInfo.propertyID); > > why two slots? Could you just pass propertyInfo.hadPixelOrPosPrefix as parameter?
In fact you can't modify the signature.
Geoffrey Garen
Comment 9
2012-03-08 14:39:35 PST
Comment on
attachment 130495
[details]
Patch r=me, fix the build please
Benjamin Poulain
Comment 10
2012-03-08 18:58:44 PST
Created
attachment 130950
[details]
Patch for landing
WebKit Review Bot
Comment 11
2012-03-08 23:34:15 PST
Comment on
attachment 130950
[details]
Patch for landing Clearing flags on attachment: 130950 Committed
r110271
: <
http://trac.webkit.org/changeset/110271
>
WebKit Review Bot
Comment 12
2012-03-08 23:34:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug