Base the access to CSSStyleDeclaration on the CSSPropertyID instead of the PropertyName https://bugs.webkit.org/show_bug.cgi?id=80461

Patch by Benjamin Poulain <bpoulain@apple.com> on 2012-03-08
Reviewed by Geoffrey Garen.

Previously, the acces to CSS Style properties was done through a NamedGetter. This caused
the (slow) mapping between CSSPropertyName and CSSPropertyID to be done twice for every acess:
1) canGetItemsForName() prior to the definition of the slot.
2) nameGetter() called from the slot with CSSPropertyName to get the actual value.

This patch changes the access to be based on CSSPropertyID. The slot is defined with the
CSSPropertyID as the customIndex, and the value can be accessed directly when the slot is
called.

To handle the differences create by hadPixelOrPosPrefix, two nearly identical callback are defined,
one for hadPixelOrPosPrefix, the other for !hadPixelOrPosPrefix.

The performance gain is about 19% when accessing CSS properties.

* bindings/js/JSCSSStyleDeclarationCustom.cpp:
(WebCore::getPropertyValueFallback):
(WebCore::cssPropertyGetterPixelOrPosPrefix):
(WebCore):
(WebCore::cssPropertyGetterPixelOrPosPrefixCallback):
(WebCore::cssPropertyGetter):
(WebCore::cssPropertyGetterCallback):
(WebCore::JSCSSStyleDeclaration::getOwnPropertySlotDelegate):
(WebCore::JSCSSStyleDeclaration::getOwnPropertyDescriptorDelegate):
* css/CSSStyleDeclaration.idl:

Canonical link: https://commits.webkit.org/97867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110271 268f45cc-cd09-0410-ab3c-d52691b4dbfc